@@ -1,3 +1,9 @@
+2008-09-25  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOCall.c (InitCallChain, IsStillValid):
+	* tests/oo.test (oo-25.2): Revise call chain cache management so that
+	it takes into account class-wide caching correctly. [Bug 2120903]
+
 2008-09-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclOOMethod.c (DBPRINT): Remove obsolete debugging macro.
